# cluster-api

./: CONTRIBUTING.md  Dockerfile  Makefile  PROJECT
cmd/clusterctl/: CONTRIBUTING.md  README.md
cmd/clusterctl/clientcmd/: configutil.go
cmd/clusterctl/clusterdeployer/: BUILD.bazel  clusterdeployer.go  clusterdeployer_test.go  providercomponentsstorefactory.go
cmd/clusterctl/cmd/: BUILD.bazel  alpha_phase_apply_addons.go  alpha_phase_apply_cluster.go  (+6 more)
cmd/manager/: BUILD.bazel  main.go
config/crds/: cluster_v1beta1_cluster.yaml  cluster_v1beta1_machine.yaml  cluster_v1beta1_machineclass.yaml  cluster_v1beta1_machinedeployment.yaml  cluster_v1beta1_machineset.yaml
config/default/: kustomization.yaml
config/samples/: cluster_v1alpha1_cluster.yaml  cluster_v1alpha1_machine.yaml  cluster_v1alpha1_machinedeployment.yaml  cluster_v1alpha1_machineset.yaml  cluster_v1beta1_cluster.yaml  cluster_v1beta1_machine.yaml  cluster_v1beta1_machinedeployment.yaml  cluster_v1beta1_machineset.yaml
docs/proposals/: machine-api-proposal.md
pkg/apis/: BUILD.bazel  addtoscheme_cluster_v1beta1.go
pkg/apis/cluster/v1beta1/testutil/: BUILD.bazel  testutil.go
pkg/cert/: BUILD.bazel  cert_authority_test.go
pkg/cmd-runner/: BUILD.bazel  cmd_runner_test.go
pkg/errors/: BUILD.bazel  clusters.go  machines.go
pkg/kubeadm/: BUILD.bazel  kubeadm.go  kubeadm_test.go
pkg/test-cmd-runner/: BUILD.bazel  test_cmd_runner_test.go
pkg/util/: BUILD.bazel  util.go  util_test.go
sample/: cluster.yaml  machine.yaml  machineclass.yaml  machinedeployment.yaml  machineset.yaml
(+146 files in other folders)
