load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["testutil.go"],
    importpath = "github.com/openshift/cluster-api/pkg/apis/cluster/v1beta1/testutil",
    visibility = ["//visibility:public"],
    deps = ["//pkg/apis/cluster/v1beta1:go_default_library"],
)
